--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 📝 제품 등록
             </button>
             <button class="nav-tab" data-page="engagement-assistant">
-                💬 인게이지먼트 어시스턴트
+                💬 SNS 성장 도우미
             </button>
             <button class="nav-tab disabled" data-page="analytics-dashboard" id="analyticsTab">
                 📊 분석 대시보드
