--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <button class="nav-tab active" data-page="product-register">
                 📝 제품 등록
             </button>
+            <button class="nav-tab" data-page="content-generator">
+                🎬 컨텐츠 생성
+            </button>
             <button class="nav-tab" data-page="engagement-assistant">
                 💬 SNS 성장 도우미
             </button>
@@ -49,7 +52,7 @@
         <!-- 푸터 -->
         <footer class="dashboard-footer">
             <div class="version-info">
-                <strong>v2.0.0</strong> by IdeaForest24
+                <strong>v2.1.0</strong> by IdeaForest24
             </div>
             <div class="status-info">
                 <span id="connectionStatus">🟢 연결됨</span>
@@ -115,6 +118,7 @@
     <!-- 스크립트 로드 -->
     <script src="js/main.js"></script>
     <script src="js/product-register.js"></script>
+    <script src="js/content-generator.js"></script>
     <script src="js/engagement-assistant.js"></script>
     <script src="js/analytics.js"></script>
     
