--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/modules/product-cardnews.css">
     <link rel="stylesheet" href="css/modules/product-shortform.css">
     <link rel="stylesheet" href="css/modules/product-giftstory.css">
+    <link rel="stylesheet" href="css/modules/engagement-assistant.css">
     <link rel="stylesheet" href="css/modules/analytics.css">
 </head>
 <body>
@@ -57,7 +58,7 @@
         <!-- 푸터 -->
         <footer class="dashboard-footer">
             <div class="version-info">
-                <strong>v3.1.0-css</strong> by IdeaForest24
+                <strong>v3.1.2-test</strong> by IdeaForest24
             </div>
             <div class="status-info">
                 <span id="connectionStatus">🟢 연결됨</span>
