--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- 푸터 -->
         <footer class="dashboard-footer">
             <div class="version-info">
-                <strong>v3.1.2-test</strong> by IdeaForest24
+                <strong>v3.0.1-css</strong> by IdeaForest24
             </div>
             <div class="status-info">
                 <span id="connectionStatus">🟢 연결됨</span>
